--- a/index.html
+++ b/index.html
@@ -24,15 +24,21 @@
     async function Scatter() {
       // Load CSV
       const parseDate = d3.timeParse("%Y-%m-%d");
-      const data = await d3.csv("GlobalTemperatures.csv", d => {
-        return {
-          date: parseDate(d.dt),
-          land: +d.LandAverageTemperature,
-          landUncertainty: +d.LandAverageTemperatureUncertainty,
-          landOcean: +d.LandAndOceanAverageTemperature,
-          landOceanUncertainty: +d.LandAndOceanAverageTemperatureUncertainty
-        };
-      });
+      const data = (await d3.csv("GlobalTemperatures.csv", d => {
+  const date = parseDate(d.dt);
+  const land = +d.LandAverageTemperature;
+  const landOceanUncertainty = +d.LandAndOceanAverageTemperatureUncertainty;
+  
+  if (!date || isNaN(land) || isNaN(landOceanUncertainty)) return null;
+  
+  return {
+    date,
+    land,
+    landUncertainty: +d.LandAverageTemperatureUncertainty,
+    landOcean: +d.LandAndOceanAverageTemperature,
+    landOceanUncertainty
+  };
+})).filter(d => d !== null);
 
       const margin = {top: 20, right: 30, bottom: 50, left: 60};
       const width = 800 - margin.left - margin.right;
