--- a/index.html
+++ b/index.html
@@ -26,17 +26,16 @@
 
       // Load CSV
       const data = (await d3.csv("GlobalTemperatures.csv", d => {
-        const time = parseDate(d.dt);
-        const LAT = +d.LandAverageTemperature;
-        const LATU = +d.LandAverageTemperatureUncertainty;
-        const LOAT = +d.LandAndOceanAverageTemperature;
-        const LOATU = +d.LandAndOceanAverageTemperatureUncertainty;
+        return {
+          time: parseDate(d.dt),
+          LAT: +d.LandAverageTemperature,
+          LATU: +d.LandAverageTemperatureUncertainty,
+          LOAT: +d.LandAndOceanAverageTemperature,
+          LOATU: +d.LandAndOceanAverageTemperatureUncertainty
+        };
+      })).filter(d => d.time && !isNaN(d.LAT) && !isNaN(d.LOAT) && !isNaN(d.LOATU));
 
-        if (!time || isNaN(LAT) || isNaN(LOATU)) return null;
-        return { time, LAT, LATU, LOAT, LOATU };
-      })).filter(d => d !== null);
-
-      const margin = { top: 20, right: 30, bottom: 50, left: 60 };
+      const margin = {top: 20, right: 30, bottom: 50, left: 60};
       const width = 800 - margin.left - margin.right;
       const height = 500 - margin.top - margin.bottom;
 
@@ -52,24 +51,20 @@
         .domain(d3.extent(data, d => d.time))
         .range([0, width]);
 
-      // Y scale (with padding)
+      // Y scale
       const cyScale = d3.scaleLinear()
-        .domain([
-          d3.min(data, d => d.LAT) - 1,
-          d3.max(data, d => d.LAT) + 1
-        ])
+        .domain(d3.extent(data, d => d.LAT))
+        .nice()
         .range([height, 0]);
 
-      // Radius scale 
+      // Radius scale
       const rScale = d3.scaleSqrt()
         .domain(d3.extent(data, d => d.LOATU))
         .range([2, 8]);
 
       // Color scale
-      const loatExtent = d3.extent(data, d => d.LOAT);
-      const colorScale = d3.scaleSequential()
-        .interpolator(d3.interpolateTurbo)
-        .domain([loatExtent[0], loatExtent[1]]);
+      const colorScale = d3.scaleSequential(d3.interpolateTurbo)
+        .domain(d3.extent(data, d => d.LOAT));
 
       // Draw circles
       svg.selectAll("circle")
@@ -79,19 +74,21 @@
           .attr("cx", d => cxScale(d.time))
           .attr("cy", d => cyScale(d.LAT))
           .attr("r", d => rScale(d.LOATU))
-          .attr("fill", d => colorScale(d.LOAT))   // ✅ fixed
+          .attr("fill", d => colorScale(d.LOAT))
           .attr("opacity", 0.7);
 
       // X Axis
+      const xAxis = d3.axisBottom(cxScale);
       svg.append("g")
         .attr("class", "x axis")
         .attr("transform", `translate(0,${height})`)
-        .call(d3.axisBottom(cxScale));
+        .call(xAxis);
 
       // Y Axis
+      const yAxis = d3.axisLeft(cyScale);
       svg.append("g")
         .attr("class", "y axis")
-        .call(d3.axisLeft(cyScale));
+        .call(yAxis);
 
       // Axis labels
       svg.append("text")
@@ -105,7 +102,7 @@
         .attr("y", -margin.left + 15)
         .attr("x", -height / 2)
         .attr("text-anchor", "middle")
-        .text("Land Average Temperature");
+        .text("Land Average Temperature (°C)");
     }
 
     Scatter();
