--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           LOAT: +d.LandAndOceanAverageTemperature,
           LOATU: +d.LandAndOceanAverageTemperatureUncertainty
         };
-      })).filter(d => d.time && !isNaN(d.LAT) && !isNaN(d.LOAT) && !isNaN(d.LOATU));
+      }))
 
       const margin = {top: 20, right: 30, bottom: 50, left: 60};
       const width = 800 - margin.left - margin.right;
@@ -44,7 +44,7 @@
         .attr("width", width + margin.left + margin.right)
         .attr("height", height + margin.top + margin.bottom)
         .append("g")
-        .attr("transform", `translate(${margin.left},${margin.top})`);
+        .attr("transform", translate(${margin.left},${margin.top})`);
 
       // X scale
       const cxScale = d3.scaleTime()
@@ -60,7 +60,7 @@
       // Radius scale
       const rScale = d3.scaleSqrt()
         .domain(d3.extent(data, d => d.LOATU))
-        .range([2, 8]);
+        .range([10, 20]);
 
       // Color scale
       const colorScale = d3.scaleSequential(d3.interpolateTurbo)
