--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
       const height = 500 - margin.top - margin.bottom;
 
       const svg = d3.select("#scatterplot_1")
-        .append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-        .append("g")
-        .attr("transform", translate(${margin.left},${margin.top}));
+  .append("svg")
+  .attr("width", width + margin.left + margin.right)
+  .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+  .attr("transform", `translate(${margin.left},${margin.top})`);
+
 
       // X scale
       const cxScale = d3.scaleTime()
