--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           LOATU: +d.LandAndOceanAverageTemperatureUncertainty
         };
       }))
-
+    console.log(data);
+    console.log(data[0]);
       const margin = {top: 20, right: 30, bottom: 50, left: 60};
       const width = 800 - margin.left - margin.right;
       const height = 500 - margin.top - margin.bottom;
