--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     async function Scatter() {
 
       // Load CSV
+      const parseDate = d3.timeParse("%Y-%m-%d")
       const data = await d3.csv("GlobalTemperatures.csv", d => {
         return {
-          time: d3.timeParse("%Y-%m-%d")(d.dt),
-          LAT: +d.LandAverageTemperature,
-          LATU: +d.LandAverageTemperatureUncertainty,
-          LOAT: +d.LandAndOceanAverageTemperature,
-          LOATU: +d.LandAndOceanAverageTemperatureUncertainty
+          d.time =  parseDate(d.dt),
+          d.LAT = +d.LandAverageTemperature,
+          d.LATU = +d.LandAverageTemperatureUncertainty,
+          d.LOAT = +d.LandAndOceanAverageTemperature,
+          d.LOATU = +d.LandAndOceanAverageTemperatureUncertainty
         };
       });
     console.log(data);
@@ -44,7 +45,7 @@
 
 
       // X scale
-      const cxScale = d3.scaleLinear()
+      const cxScale = d3.scaleTime()
         .domain(d3.extent(data, d => d.time))
         .range([0, width]);
 
