--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       });
     console.log(data);
     console.log(data[0]);
+    console.log(d3.extent(data, d => d.time));
     
       const margin = {top: 20, right: 30, bottom: 50, left: 60};
       const width = 800 - margin.left - margin.right;
